--- a/style.css
+++ b/style.css
@@ -25,13 +25,16 @@ body{
     align-items: unset;
 }
 
+.a3 a{
+    color: white;
+}
 .a3 h3{
     text-align: left;
     margin: 15px;
 }
 
 .a3 p{
-    margin-top: 15px;
+    margin-top: 10px;
 }
 
 h1{
